<resources>
    <string name="app_name">Limbo Emulator</string>
    <string name="app_short_name">Limbo</string>
    <string name="address_caption">Address</string>
    <string name="alt_check">Alt</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="auto">Auto</string>
    <string name="button_send_text">Send Text</string>
    <string name="button_send_without_saving">Send Text/Don\'t Save It</string>
    <string name="center_mouse">Mouse</string>
    <string name="close">Close</string>
    <string name="color_format_caption">Color Format</string>
    <string name="color_mode">Color Mode</string>
    <string name="connect_button">Connect</string>
    <string name="connection_caption">Connection</string>
    <string name="control_check">Ctrl</string>
    <string name="reset">Reset</string>
    <string name="shutdown">Shutdown</string>
    <string name="copy_list_button">Copy List</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="ctrl_c">Ctrl-c</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="delete_key">Delete Selected Key</string>
    <string name="delete_key_list">Delete Key List</string>
    <string name="disconnect">Disconnect</string>
    <string name="devices">Devices</string>
    <string name="external_mouse">External Mouse</string>
    <string name="monitor">QEMU Monitor</string>
    <string name="export_settings">Export</string>
    <string name="export_settings_path">Export to file</string>
    <string name="enter_text_title">Enter Text to Send</string>
    <string name="enter_text">Send text</string>
    <string name="stretch_to_screen">Stretch to Screen</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="full_screen">Fullscreen</string>
    <string name="toggle_full_screen">Toggle Fullscreen</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="force_full_check">Force full-screen bitmap</string>
    <string name="import_export_settings">Import/Export Settings</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_file_url">Import from file or URL</string>
    <string name="info">Info</string>
    <string name="intro_text">If you need help, please check the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/Documentation"&gt;manual&lt;/a&gt; (press phone\'s Menu button to access manual and other menu items), or the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/faq"&gt;FAQ&lt;/a&gt;.&lt;br&gt;</string>
    <string name="intro_title">Welcome</string>
    <string name="intro_version_text">&lt;br&gt;--Sent text is remembered across sessions (optionally)&lt;br&gt;--Import/Export settings to file&lt;br&gt;--Button with zoom controls to bring up keyboard&lt;br&gt;--Can force tiling mode (very large screens)</string>
    <string name="input_mode">Input Mode</string>
    <string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
    <string name="input_mode_mouse">Mouse Pointer Control Mode</string>
    <string name="input_mode_panning">Desktop Panning Mode</string>
    <string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
    <string name="input_mode_dpad_pan_touchpad_mouse">Touch Mouse; D-Pad Pan</string>
    <string name="input_mode_touch_pan_zoom_mouse">Touch Mouse Pan and Zoom</string>
    <string name="input_mode_touchpad">Touchpad</string>
    <string name="keep_password_button">Keep</string>
    <string name="intro_dont_show">Don\'t show again</string>
    <string name="keys_caption">Keys</string>
    <string name="list_caption">List</string>
    <string name="list_name_caption">List Name</string>
    <string name="local_mouse_check">Local mouse pointer</string>
    <string name="meta_key_title">Send Special Keys</string>
    <string name="mouse_follow_pan">Mouse follow pan</string>
    <string name="new_list_button">New List</string>
    <string name="nickname_caption">Nickname</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="one_to_one">Normal (1:1)</string>
    <string name="open_doc">Manual/Wiki</string>
    <string name="pan_follow_mouse">Pan Follows Mouse</string>
    <string name="password_caption">Password</string>
    <string name="port_caption">Port</string>
    <string name="repeater_button">Repeater</string>
    <string name="repeater_caption">Enter the repeater address &lt;b&gt;only if&lt;/b&gt; you are using an&lt;br&gt;&lt;i&gt;UltraVNC&lt;/i&gt;-type repeater</string>
    <string name="repeater_clear">Don\'t use repeater</string>
    <string name="repeater_dialog_title">Repeater Information</string>
    <string name="repeater_empty_text">No repeater</string>
    <string name="repeater_save">Use this repeater address</string>
    <string name="save_as_copy">Save as Copy</string>
    <string name="scaling">Scaling</string>
    <string name="save_state">Pause VM</string>
    <string name="scaling_zoomable">Zoomable</string>
    <string name="send_button">Send</string>
    <string name="send_key_again">Send Key Again</string>
    <string name="shift_check">Shift</string>
    <string name="shortcut_label">VNC Connection</string>
    <string name="showkbd_label">Keyboard</string>
    <string name="special_keys">Special Keys</string>
    <string name="username_caption">Username</string>
    <string name="username_hint">For Windows Authentication</string>
    <string name="right_click">Mouse Right Click</string>
    <string name="help">Help</string>
    <string name="drives">Drives</string>
    <string name="volume">Volume</string>
    <string name="Default" translatable="false">default</string>
    <string name="hide_toolbar">Hide Toolbar</string>
    <string name="view_log">View Log</string>
    <string name="display_refresh_rate">Display Refresh Rate</string>
    <string name="ui_mode">UI Mode</string>
    <string name="display">Display</string>
    <string name="absolutePointerInstructions">Make sure the guest os supports touch screen devices!\n\n \
        Choose Mouse = \"usb-tablet\" from Limbo before you boot the machine.</string>
    <string name="externalMouseInstructions">Plug in your USB/Bluetooth Mouse in your Android device.</string>
    <string name="reconnect">Reconnect</string>
    <string name="calibrate_mouse">Calibrate (Fix) Mouse</string>
    <string name="isos_and_tools_descr">Do you want to view a list of Compatible OSes and Download Links?</string>
    <string name="customOperatingSystem">Custom Operating System - use your own ISO and HDD images</string>
    <string name="toggle_key_mapper">Toggle Key Mapper</string>
    <string name="clear_key">Clear Key</string>
    <string name="repeat_key">Repeat Key</string>
    <string name="add_keymapper">Add Key Mapper</string>
    <string name="use_keymapper">Use Key Mapper</string>
    <string name="add_special_keys">Add Special Keys/Buttons</string>
    <string name="remove_key_mapper">Remove Key Mapper</string>
    <string name="welcomeText">Welcome to Limbo Emulator, a port of QEMU for Android devices. Limbo can emulate several operating systems. For links to downloads, guides, and virtual disk images visit the Limbo Wiki. Download software and images only from trusted websites!"</string>
    <string name="checkForUpdates">Check for Updates on Startup</string>
    <string name="sdcardNotMounted">Error: SD card is not mounted</string>
    <string name="fixesMouseParen">(Fixes Mouse)</string>
    <string name="machinesImported">Machines Imported</string>
    <string name="reassignDiskFilesInstructions">If this is a new install you will need to re-open all disk files via the file manager</string>
    <string name="importInstructions">Choose the export.csv file you want to import.\n"WARNING: Any machine with the same name will be replaced</string>
    <string name="vmNotRunning">VM not running</string>
    <string name="Running">Running</string>
    <string name="Suspended">Suspended</string>
    <string name="Stopped">Stopped</string>
    <string name="savingState">Saving State</string>
    <string name="paused">Paused</string>
    <string name="orientation">Orientation</string>
    <string name="keyboard">Keyboard</string>
    <string name="toolbarOn">Toolbar On</string>
    <string name="mouse">Mouse</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="externalVncOn">External VNC Server: On</string>
    <string name="externalQMPServerOn">External QMP Server: On</string>
    <string name="desktopMode">Desktop Mode</string>
    <string name="highPriorityWarning">Warning! High Priority might increase emulation speed but will slow your phone down!"</string>
    <string name="AllowExternalVNCConnections">Allow External VNC Connections</string>
    <string name="AllowExternalVNCSummary">Allow external VNC CLients. Needs app restart. VNC Connections including passwords are not encrypted so only use in a private network that you trust!</string>
    <string name="EnableQMPServerSummary">Run QMP Server. This is needed to set a password for VNC, pausing the VM, and changing removable drives.</string>
    <string name="EnableQMPServer">Enable QMP Server</string>
    <string name="AllowExternalQMPConnectionsSummary">Allow external QMP CLients. Needs app restart. Connections are not encrypted so only use in a private network that you trust!</string>
    <string name="AllowExternalQMPConnections">Allow External QMP Connections</string>
    <string name="RunVMThreadHighPriority">Run vm thread in high priority</string>
    <string name="HighPriority">High Priority</string>
    <string name="AlwaysShowToolbar">Always show the Toolbar</string>
    <string name="AlwaysToolbar">Always Toolbar</string>
    <string name="KeyMapperButtonLayout">Key Mapper button layout</string>
    <string name="KeyMapperLayout">Key Mapper layout</string>
    <string name="EnableLegacyFileManagerSummary">Enable legacy file manager for older devices. SD Card might not be supported</string>
    <string name="EnableLegacyFileManager">Enable Legacy File Manager</string>
    <string name="SetVNCPassword">Set VNC Password</string>
    <string name="EnableVNCPassword">Enable VNC Password (recommended)</string>
    <string name="PreventMouseOutOfBounds">Prevent Mouse out of Bounds</string>
    <string name="PreventMouseDescr">Prevents some OSes from crashing when using \"usb-tablet\" mouse and the pointer is outside of screen bounds.\nWarning: This might create an invisible wall if the guest OS does not support \"usb-tablet\".</string>
    <string name="keyPressDelay">Key Pressed Delay</string>
    <string name="keyPressDelaySummary">Delay between keyboard keys pressed. Lower values have better performance but key events might be not be understood by the emulator so use higher values.</string>
    <string name="mouseButtonDelay">Mouse Button Click Delay</string>
    <string name="mouseButtonDelaySummary">Delay between mouse button clicks. Lower values have better performance but mouse events might be not be understood by the emulator so use higher values.</string>
    <string name="diskCache">Disk Cache</string>
    <string name="diskCacheSummary">Disk Cache might not work with Legacy Manager! If you encounter issues set to Default</string>
    <string name="IgnoreBreakpointInvalidation">Ignore Breakpoint Invalidation</string>
    <string name="IgnoreBreakpointInvalidationSummary">Ignore Breakpoint Invalidation</string>
</resources>