<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LimboSDLActivity" >

    <item
        android:id="@+id/itemKeyboard"
        android:icon="@drawable/keyboard"
        android:title="@string/showkbd_label"/>
    <item
        android:id="@+id/itemCenterMouse"
        android:icon="@drawable/mouse"
        android:title="@string/center_mouse"/>
    <item
        android:id="@+id/itemDrives"
        android:icon="@drawable/drives"
        android:title="@string/drives"/>


    <item
        android:id="@+id/itemDisplay"
        android:icon="@drawable/screen"
        android:title="@string/display"/>


    <item
        android:id="@+id/itemMonitor"
        android:icon="@drawable/terminal"
        android:title="@string/monitor">
    </item>

    <item
        android:id="@+id/itemHideToolbar"
        android:icon="@drawable/pan"
        android:title="@string/hide_toolbar"/>
    <item
        android:id="@+id/itemReconnect"
        android:icon="@drawable/refresh"
        android:title="@string/reconnect"/>

    <item
        android:id="@+id/itemDisconnect"
        android:icon="@drawable/disconnect"
        android:title="@string/disconnect">
    </item>

    <item
        android:id="@+id/itemCalibrateMouse"
        android:icon="@drawable/mouse"
        android:title="@string/calibrate_mouse">
    </item>

    <item
        android:id="@+id/itemSaveState"
        android:icon="@drawable/pause"
        android:title="@string/save_state"/>

    <item
        android:id="@+id/itemReset"
        android:icon="@drawable/reset"
        android:title="@string/reset"/>
    <item
        android:id="@+id/itemShutdown"
        android:icon="@drawable/shutdown"
        android:title="@string/shutdown"/>


    <item
        android:id="@+id/itemViewLog"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/view_log"/>

    <item
        android:id="@+id/itemHelp"
        android:icon="@drawable/help"
        android:title="@string/help">
    </item>


    <!--XXXX: Not needed-->

    <item
        android:id="@+id/itemColorMode"
        android:icon="@drawable/screen"
        android:title="@string/color_mode">
    </item>


    <item
        android:id="@+id/itemFullScreen"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/toggle_full_screen"/>

    <item
        android:id="@+id/itemInputMode"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/input_mode">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/itemInputTouchPanZoomMouse"
                    android:title="@string/input_mode_touch_pan_zoom_mouse"/>
                <item
                    android:id="@+id/itemInputTouchpad"
                    android:title="@string/input_mode_touchpad"/>
                <item
                    android:id="@+id/itemInputFitToScreen"
                    android:checked="true"
                    android:title="@string/input_mode_fit_to_screen"/>
                <item
                    android:id="@+id/itemInputPan"
                    android:title="@string/input_mode_panning"/>
                <item
                    android:id="@+id/itemInputMouse"
                    android:title="@string/input_mode_mouse"/>
                <item
                    android:id="@+id/itemInputTouchPanTrackballMouse"
                    android:title="@string/input_mode_touchpad_pan_trackball_mouse"/>
                <item
                    android:id="@+id/itemInputDPadPanTouchMouse"
                    android:title="@string/input_mode_dpad_pan_touchpad_mouse"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/itemScaling"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/scaling">
        <menu>
            <group
                android:id="@+id/groupScaling"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/itemZoomable"
                    android:title="@string/scaling_zoomable"/>
                <item
                    android:id="@+id/itemOneToOne"
                    android:title="@string/one_to_one"/>
                <item
                    android:id="@+id/itemFitToScreen"
                    android:checked="true"
                    android:title="@string/fit_to_screen"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/itemEnterText"
        android:alphabeticShortcut="e"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/enter_text"/>

    <item
        android:id="@+id/itemSpecialKeys"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/special_keys"/>
    <item
        android:id="@+id/itemSendKeyAgain"
        android:title="@string/send_key_again"/>
    <item
        android:id="@+id/itemCtrlC"
        android:icon="@drawable/keyboard"
        android:title="@string/ctrl_c"/>

    <item
        android:id="@+id/itemCtrlAltDel"
        android:icon="@drawable/keyboard"
        android:title="@string/ctrl_alt_del"/>

</menu>