<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Files">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="EnableLegacyFileManager"
            android:summary="@string/EnableLegacyFileManagerSummary"
            android:title="@string/EnableLegacyFileManager" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Screen">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/orientationLabels"
            android:entryValues="@array/orientationValues"
            android:key="orientationPref"
            android:summary="@string/orientation"
            android:title="@string/orientation" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="AlwaysShowMenuToolbar"
            android:summary="@string/AlwaysShowToolbar"
            android:title="@string/AlwaysToolbar" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ShowFullscreen"
            android:summary="Show Fullscreen"
            android:title="Fullscreen" />

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/keyMapperLabels"
            android:entryValues="@array/keyMapperValues"
            android:key="keyMapperSize"
            android:summary="@string/KeyMapperButtonLayout"
            android:title="@string/KeyMapperLayout" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preventMouseOutOfBounds"
            android:summary="@string/PreventMouseDescr"
            android:title="@string/PreventMouseOutOfBounds" />

        <ListPreference
            android:defaultValue="100"
            android:entries="@array/keyPressDelayLabels"
            android:entryValues="@array/keyPressDelayValues"
            android:key="keyPressDelay"
            android:summary="@string/keyPressDelaySummary"
            android:title="@string/keyPressDelay" />

        <ListPreference
            android:defaultValue="100"
            android:entries="@array/mouseButtonDelayLabels"
            android:entryValues="@array/mouseButtonDelayValues"
            android:key="mousePressDelay"
            android:summary="@string/mouseButtonDelaySummary"
            android:title="@string/mouseButtonDelay" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Advanced">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="HighPrio"
            android:summary="@string/RunVMThreadHighPriority"
            android:title="@string/HighPriority" />
    </PreferenceCategory>

    <PreferenceCategory android:title="QMP">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enableQMP"
            android:summary="@string/EnableQMPServerSummary"
            android:title="@string/EnableQMPServer" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enableQMP"
            android:key="enableExternalQMP"
            android:summary="@string/AllowExternalQMPConnectionsSummary"
            android:title="@string/AllowExternalQMPConnections" />

    </PreferenceCategory>
    <PreferenceCategory android:title="VNC">

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enableQMP"
            android:key="enableVNCPassword"
            android:summary="@string/EnableVNCPassword"
            android:title="@string/EnableVNCPassword" />

        <Preference
            android:dependency="enableVNCPassword"
            android:key="vncPass"
            android:summary="@string/SetVNCPassword"
            android:title="@string/SetVNCPassword" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enableQMP"
            android:key="enableExternalVNC"
            android:summary="@string/AllowExternalVNCSummary"
            android:title="@string/AllowExternalVNCConnections" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Disk">
        <ListPreference
            android:defaultValue="@string/Default"
            android:entries="@array/diskCacheLabels"
            android:entryValues="@array/diskCacheValues"
            android:key="diskCachePref"
            android:summary="@string/diskCacheSummary"
            android:title="@string/diskCache" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Fixes">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="ignoreBreakpointInvalidation"
            android:summary="@string/IgnoreBreakpointInvalidationSummary"
            android:title="@string/IgnoreBreakpointInvalidation" />
    </PreferenceCategory>
</PreferenceScreen>