<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LimboSDLActivity">

    <item
        android:id="@+id/itemKeyboard"
        android:icon="@drawable/keyboard"
        android:title="@string/showkbd_label"/>
    <item
        android:id="@+id/itemMouse"
        android:icon="@drawable/mouse"
        android:title="@string/center_mouse"/>
    <item
        android:id="@+id/itemDrives"
        android:icon="@drawable/drives"
        android:title="@string/drives">
    </item>
    <item
        android:id="@+id/itemSaveState"
        android:icon="@drawable/savestate"
        android:title="@string/save_state"/>
    <item
        android:id="@+id/itemSaveSnapshot"
        android:icon="@drawable/snapshot"
        android:title="@string/save_snapshot"/>
    <item
        android:id="@+id/itemVolume"
        android:icon="@drawable/audiocard"
        android:title="@string/volume">
    </item>
    <item
        android:id="@+id/itemHelp"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"/>
    <item
        android:id="@+id/itemMonitor"
        android:icon="@drawable/terminal"
        android:title="@string/monitor">
    </item>
    <item
        android:id="@+id/itemExternalMouse"
        android:icon="@drawable/mouse"
        android:title="@string/external_mouse">
    </item>
    <item
        android:id="@+id/itemCtrlC"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/ctrl_c"/>
    <item
        android:id="@+id/itemCtrlAltDel"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/ctrl_alt_del"/>
    <item
        android:id="@+id/itemReset"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/reset"/>
    <item
        android:id="@+id/itemShutdown"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/shutdown"/>
    <item
        android:id="@+id/itemScaling"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/scaling">
        <menu>
            <group
                android:id="@+id/groupScaling"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/itemOneToOne"
                    android:title="@string/one_to_one"/>
                <item
                    android:id="@+id/itemZoomIn"
                    android:title="@string/zoom_in"/>
                <item
                    android:id="@+id/itemZoomOut"
                    android:title="@string/zoom_out"/>
                <item
                    android:id="@+id/itemFitToScreen"
                    android:title="@string/fit_to_screen"/>
                <item
                    android:id="@+id/itemStretchToScreen"
                    android:title="@string/stretch_to_screen"/>
            </group>
        </menu>
    </item>

</menu>