<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:paddingRight="10dip"
                android:text="@string/connection_caption"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/buttonGO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_button"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinnerConnection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/divider_horizontal_bright" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TableRow>

                    <TextView
                        android:gravity="right|center_vertical"
                        android:paddingRight="10dip"
                        android:text="@string/nickname_caption"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/textNickname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:gravity="right|center_vertical"
                        android:paddingRight="10dip"
                        android:text="@string/password_caption"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/textPASSWORD"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:password="true"
                            android:singleLine="true" />

                        <CheckBox
                            android:id="@+id/checkboxKeepPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/keep_password_button" />
                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:gravity="right|center_vertical"
                        android:hint="localhost"
                        android:paddingRight="10dip"
                        android:text="@string/address_caption"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/textIP"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:gravity="right|center_vertical"
                        android:paddingRight="10dip"
                        android:text="@string/port_caption"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/textPORT"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:text="5900" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:gravity="right|center_vertical"
                        android:paddingRight="10dip"
                        android:text="@string/username_caption"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/textUsername"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/username_hint"
                        android:singleLine="true" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/color_format_caption"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/colorformat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkboxUseLocalCursor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/local_mouse_check" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/force_full_check" />

                <RadioGroup
                    android:id="@+id/groupForceFullScreen"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioForceFullScreenAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/auto" />

                    <RadioButton
                        android:id="@+id/radioForceFullScreenOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on" />

                    <RadioButton
                        android:id="@+id/radioForceFullScreenOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/off" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonRepeater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeater_button" />

                <TextView
                    android:id="@+id/textRepeaterId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/repeater_empty_text" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonImportExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_export_settings" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>